--- a/planta.html
+++ b/planta.html
@@ -36,31 +36,31 @@
     <div id="carousel2" class="carousel slide mb-5" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="media/cloaca1.png" class="d-block w-100" alt="Planta Depuradora de Brandsen">
+          <img src="cloaca1.png" class="d-block w-100" alt="Planta Depuradora de Brandsen">
         </div>
         <div class="carousel-item">
-          <img src="media/cloaca2.png" class="d-block w-100" alt="Planta Depuradora de Brandsen">
+          <img src="cloaca2.png" class="d-block w-100" alt="Planta Depuradora de Brandsen">
         </div>
         <div class="carousel-item">
-          <img src="media/cloaca3.png" class="d-block w-100" alt="Planta Depuradora de Brandsen">
+          <img src="cloaca3.png" class="d-block w-100" alt="Planta Depuradora de Brandsen">
         </div>
 		<div class="carousel-item">
-          <img src="media/cloaca4.png" class="d-block w-100" alt="Planta Depuradora de Brandsen">
+          <img src="cloaca4.png" class="d-block w-100" alt="Planta Depuradora de Brandsen">
         </div>
 		<div class="carousel-item">
-          <img src="media/cloaca5.png" class="d-block w-100" alt="Planta Depuradora de Brandsen">
+          <img src="cloaca5.png" class="d-block w-100" alt="Planta Depuradora de Brandsen">
         </div>
 		<div class="carousel-item">
-          <img src="media/planta1.jpeg" class="d-block w-100" alt="Planta Depuradora de Brandsen">
+          <img src="planta1.jpeg" class="d-block w-100" alt="Planta Depuradora de Brandsen">
         </div>
 		<div class="carousel-item">
-          <img src="media/planta2.jpeg" class="d-block w-100" alt="Planta Depuradora de Brandsen">
+          <img src="planta2.jpeg" class="d-block w-100" alt="Planta Depuradora de Brandsen">
         </div>
 		<div class="carousel-item">
-          <img src="media/planta3.jpeg" class="d-block w-100" alt="Planta Depuradora de Brandsen">
+          <img src="planta3.jpeg" class="d-block w-100" alt="Planta Depuradora de Brandsen">
         </div>
 		<div class="carousel-item">
-          <img src="media/planta4.jpeg" class="d-block w-100" alt="Planta Depuradora de Brandsen">
+          <img src="planta4.jpeg" class="d-block w-100" alt="Planta Depuradora de Brandsen">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carousel2" data-bs-slide="prev">
@@ -77,7 +77,7 @@
       <p>Manuel Belgrano 935, Coronel Brandsen, Provincia de Buenos Aires</p>
       
         <div class="col-md-6 mb-3">
-          <img src="media/ubicacionPlanta.png" class="img-fluid rounded" alt="Ubicacion Brandsen - realizada por alumnos">
+          <img src="ubicacionPlanta.png" class="img-fluid rounded" alt="Ubicacion Brandsen - realizada por alumnos">
         </div>
     </section>
 
@@ -115,19 +115,19 @@
       <h4>Audios</h4>
       <p><strong>Planta Depuradora, posibles enfermedades:</strong></p>
       <audio class="w-100 mb-3" controls>
-        <source src="media/Personas con Problem.mp3" type="audio/mp3">
+        <source src="Personas con Problem.mp3" type="audio/mp3">
         Tu navegador no soporta audio.
       </audio>
 
       <p><strong>Planta Depuradora, enfermedades psicologicas:</strong></p>
       <audio class="w-100 mb-3" controls>
-        <source src="media/Efectos Psicologicos.mp3" type="audio/mp3">
+        <source src="Efectos Psicologicos.mp3" type="audio/mp3">
         Tu navegador no soporta audio.
       </audio>
 	  
       <p><strong>Planta Depuradora, posibles problemas que puede causar:</strong></p>
       <audio class="w-100 mb-3" controls>
-        <source src="media/Problemas que puede .mp3" type="audio/mp3">
+        <source src="Problemas que puede .mp3" type="audio/mp3">
         Tu navegador no soporta audio.
       </audio>
     </div>
@@ -136,19 +136,19 @@
       <!-- trabajos de la planta -->
       <div class="row">
         <div class="col-md-6 mb-3">
-          <img src="media/maqueta.jpeg" class="img-fluid rounded" alt="maqueta planta - realizada por alumnos">
+          <img src="maqueta.jpeg" class="img-fluid rounded" alt="maqueta planta - realizada por alumnos">
         </div>
         <div class="col-md-6 mb-3">
-          <img src="media/planta1.jpeg" class="img-fluid rounded" alt="Planta depuradora de Brandsen">
+          <img src="planta1.jpeg" class="img-fluid rounded" alt="Planta depuradora de Brandsen">
         </div>
        <div class="col-md-6 mb-3">
-          <img src="media/planta2.jpeg" class="img-fluid rounded" alt="Planta depuradora de Brandsen">
+          <img src="planta2.jpeg" class="img-fluid rounded" alt="Planta depuradora de Brandsen">
         </div>
        <div class="col-md-6 mb-3">
-          <img src="media/planta3.jpeg" class="img-fluid rounded" alt="Planta depuradora de Brandsen">
+          <img src="planta3.jpeg" class="img-fluid rounded" alt="Planta depuradora de Brandsen">
         </div>
        <div class="col-md-6 mb-3">
-          <img src="media/planta4.jpeg" class="img-fluid rounded" alt="Planta depuradora de Brandsen">
+          <img src="planta4.jpeg" class="img-fluid rounded" alt="Planta depuradora de Brandsen">
         </div>
       </div>
     </section>
