--- a/aniversario.html
+++ b/aniversario.html
@@ -27,6 +27,10 @@
 
   <div class="container py-4">
     <h2 class="text-center mb-4">2° Año - Historia y Aniversario de Brandsen</h2>
+    <h2 class="text-center mb-4">Contexto Problematizador:</h2> 
+	<h4 class="text-center mb-4" style="text-color=blue;">Diversidad sociocultural e interculturalidad: tensiones, disputas y apropiaciones.</h4>
+    <h2 class="text-center mb-4">Situación Problemática:</h2> 
+	<h4 class="text-center mb-4">¿Cómo han cambiado los aspectos socioculturales de Brandsen en sus 150 años de historia?</h4>
 
     <!-- Carrusel solo con imágenes -->
     <div id="carousel2" class="carousel slide mb-5" data-bs-ride="carousel">
@@ -172,18 +176,16 @@
 	<!-- Bandera -->
     <section class="mb-5">
       <h3>🏳️ Historia de la Bandera del Partido de Brandsen</h3>
-      <p>La bandera oficial del Partido de Brandsen fue adoptada el 21 de octubre de 2008, luego de un concurso organizado por el Honorable Concejo Deliberante local y la Municipalidad, con el objetivo de fomentar el sentido de pertenencia e identidad entre los habitantes del distrito.</p>
-      <p>El proceso de creación y elección de la bandera incluyó la participación de escuelas, instituciones y vecinos. La propuesta ganadora fue seleccionada por un jurado y luego aprobada por ordenanza municipal.</p>
+      <p>La bandera del partido de Brandsen fue elegida y oficializada en 2013.Fue creada a través de un concurso público donde se presentaron diferentes propuestas, siendo la ganadora la presentada por la profesora Marcela Soledad Giménez.</p>
+      <p> La bandera consta de un paño blanco con un sol dorado en el cuartel superior izquierdo y cinco panelas verdes que representan las localidades del partido (Gómez, Samborombon, Jeppener, Altamirano y Oliden) en la parte inferior. </p>
 
       <h5>Diseño y Significado</h5>
-      <p>La bandera fue diseñada por <strong>Lucas Cabral</strong>, estudiante de la Escuela Técnica N.º 1 de Brandsen.</p>
       <p>Su diseño incluye los siguientes elementos simbólicos:</p>
       <ul>
-        <li><strong>Fondo celeste y blanco:</strong> representan los colores nacionales, señalando el sentido de identidad con la Patria Argentina.</li>
-        <li><strong>La espiga de trigo y el girasol:</strong> simbolizan la producción agrícola, una de las principales actividades económicas del partido.</li>
-        <li><strong>La herradura:</strong> alude a la tradición rural y ganadera.</li>
-        <li><strong>El sol naciente:</strong> representa el crecimiento y el futuro del pueblo.</li>
-        <li><strong>Una franja verde:</strong> indica el compromiso con el medio ambiente y la riqueza natural de la región.</li>
+        <li><strong>Fondo blanco:</strong> Representa la pureza y la paz del pueblo rural. </li>
+        <li><strong>Sol dorado:</strong> Simboliza el desarrollo industrial incipiente y la fuerza de trabajo de la región.</li>
+        <li><strong>anelas verdes: </strong> Representan las cinco localidades que componen el partido de Brandsen, así como la actividad rural predominante, especialmente la ganadería. </li>
+        <li><strong>Topografía llana: </strong> El verde en la parte inferior también hace referencia a la topografía plana de la región. </li>
       </ul>
 
       <!-- Imágenes de la bandera -->
@@ -195,6 +197,30 @@
           <img src="media/bandera1.jpeg" class="img-fluid rounded" alt="Bandera de Brandsen">
         </div>
       </div>
+    </section>
+	
+	<section class="mb-5">
+      <h3>Formas de participación ciudadana en Brandsen:</h3>
+      <ul>
+        <li><strong>Talleres participativos:</strong> Se realizan talleres con la comunidad para discutir y consensuar temas importantes para el desarrollo del partido, como la construcción de un plan integral.  </li>
+        <li><strong>Parlamento Juvenil: </strong> Se trata de un espacio donde los jóvenes pueden expresar sus opiniones y propuestas sobre temas de interés, buscando que sus voces sean escuchadas y tenidas en cuenta en las políticas públicas.  </li>
+        <li><strong>Planes de desarrollo: </strong> La participación ciudadana es fundamental en la elaboración de planes estratégicos, como el Plan Director Urbano Regional, donde se busca la opinión y el consenso de los vecinos. </li>
+        <li><strong>Puesta en valor de espacios públicos: </strong> Se realizan trabajos para mejorar y recuperar espacios públicos, como plazas y paseos, con el objetivo de que sean disfrutados por toda la comunidad.  </li>
+        <li><strong>Eventos y actividades: </strong> La participación ciudadana también se promueve a través de eventos como la Expo Brandsen, donde se fomenta la interacción entre vecinos y organizaciones. </li>
+        <li><strong>Iniciativas específicas: </strong> Se implementan acciones como talleres de cesación tabáquica, jornadas de vacunación y talleres de percepción de riesgos viales, buscando mejorar la calidad de vida de los habitantes. </li>
+		<li><strong>Reconocimiento a veteranos de Malvinas: </strong>La comunidad reconoce y homenajea a los veteranos de Malvinas, mostrando su compromiso con la memoria y la historia.  </li>
+      </ul>
+    </section>
+
+	<section class="mb-5">
+      <h3>Conflictos y Transformaciones:</h3>
+      <ul>
+        <li><strong>Fragmentación Urbana:</strong>Las rutas provinciales y la traza ferroviaria han creado barreras físicas, dividiendo la ciudad y dificultando la integración de ciertos barrios como Los Aromos y Santa Isabel. </li>
+        <li><strong>Anegamientos: </strong>Algunas zonas de Brandsen, como Los Aromos y Santa Isabel, sufren anegamientos, lo que evidencia problemas en la gestión del agua y el drenaje urbano. </li>
+        <li><strong>Impacto Ambiental: </strong> La actividad económica e industrial, así como la contaminación del agua y el suelo, son causas de impactos ambientales en la zona. </li>
+        <li><strong>Corrupción:</strong>La compra de tierras con fondos públicos, con presuntos manejos irregulares, ha afectado a cooperativas y ex funcionarios, generando desconfianza y cuestionamientos a la gestión pública. </li>
+        <li><strong>Cambio en el Uso del Suelo: </strong>La pérdida de rentabilidad del sector agropecuario ha contribuido a la disminución de la actividad agrícola y a la expansión urbana sobre tierras productivas.  </li>        
+      </ul>
     </section>
 	
 <table border="1" cellspacing="0" cellpadding="5">
@@ -235,8 +261,43 @@
   </tbody>
 </table>
 
+    <!-- Audios con descripciones -->
+    <div class="mb-4">
+      <h4>Audios</h4>
+      <p><strong>Cambios a traves de la historia:</strong></p>
+      <audio class="w-100 mb-3" controls>
+        <source src="media/brandsenA.mp3" type="audio/mp3">
+        Tu navegador no soporta audio.
+      </audio>
+
+      <p><strong>Cambios en brandsen:</strong></p>
+      <audio class="w-100 mb-3" controls>
+        <source src="media/brandsenb.mp3" type="audio/mp3">
+        Tu navegador no soporta audio.
+      </audio>
+    </div>
+	    
+	<div class="mb-5">
+      <h4>Video: Historia del Ferrocarril en Brandsen</h4>
+      <video class="w-100" controls>
+        <source src="media/HistoriaBrandsen.mp4" type="video/mp4">
+        Tu navegador no soporta video.
+      </video>
+    </div>
 
 
+
+
+
+<iframe width="560" height="315"
+  src="https://youtu.be/npo7WfCezsA?si=j_bc9Z8vE_LCj_Rl"
+  title="Video de ejemplo"
+  frameborder="0"
+  allowfullscreen>
+</iframe>
+
+
+	
     <a href="index.html" class="btn btn-secondary">Volver al inicio</a>
   </div>
 
