--- a/planta.html
+++ b/planta.html
@@ -151,6 +151,22 @@
           <img src="media/planta4.jpeg" class="img-fluid rounded" alt="Planta depuradora de Brandsen">
         </div>
       </div>
+      <div class="col-md-6 mb-3">
+         <img src="media/planta5.jpeg" class="img-fluid rounded" alt="Planta depuradora de Brandsen">
+      </div>
+      </div>
+      <div class="col-md-6 mb-3">
+		<img src="media/planta6.jpeg" class="img-fluid rounded" alt="Planta depuradora de Brandsen">
+      </div>
+      </div>
+      <div class="col-md-6 mb-3">
+		<img src="media/planta7.jpeg" class="img-fluid rounded" alt="Planta depuradora de Brandsen">
+      </div>
+      </div>
+	  <div class="col-md-6 mb-3">
+		<img src="media/planta8.jpeg" class="img-fluid rounded" alt="Planta depuradora de Brandsen">
+      </div>
+     </div>
     </section>
 	
 	
