--- a/aniversario.html
+++ b/aniversario.html
@@ -286,15 +286,9 @@
     </div>
 
 
+<h4>Sumérgete en la historia de Coronel Brandsen, una ciudad con un legado que ha marcado la identidad argentina. En este documental, producido por Proyero Pueblo y dirigido por Daniel Franco</h4>
+<p>Podés ver más información en <a href="https://youtu.be/npo7WfCezsA?si=j_bc9Z8vE_LCj_Rl">esta página web sobre historia de Brandsen</a>.</p>
 
-
-
-<iframe width="560" height="315"
-  src="https://youtu.be/npo7WfCezsA?si=j_bc9Z8vE_LCj_Rl"
-  title="Video de ejemplo"
-  frameborder="0"
-  allowfullscreen>
-</iframe>
 
 
 	
