--- a/hospital.html
+++ b/hospital.html
@@ -36,10 +36,10 @@
     <div id="carousel2" class="carousel slide mb-5" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="media/hospitala.jpeg" class="d-block w-100" alt="Hospital de Brandsen">
+          <img src="media/hospitala.jpg" class="d-block w-100" alt="Hospital de Brandsen">
         </div>
         <div class="carousel-item active">
-          <img src="media/hospitalb.jpeg" class="d-block w-100" alt="Hospital de Brandsen">
+          <img src="media/hospitalb.jpg" class="d-block w-100" alt="Hospital de Brandsen">
         </div>
         <div class="carousel-item active">
           <img src="media/hospital.png" class="d-block w-100" alt="Hospital de Brandsen">
@@ -74,51 +74,49 @@
 
     <!-- Planta y definiciones -->
     <section class="mb-5">
-      <h3> Plantas de tratamiento de aguas residuales:</h3>
+      <h3> Historia del Hospital:</h3>
       <ul>
-        <li><strong>Definición:</strong>Las aguas residuales o aguas negras son aquellas cuya calidad se ve afectada por la actividad humana, y se clasifican en urbanas, domésticas e industriales, según su procedencia. </li>
-        <li><strong>Función:</strong> Las plantas de tratamiento de aguas residuales o EDAR (Estación Depuradora de Aguas Residuales) se encargan de recoger las aguas procedentes de una población o sector industrial y eliminar sus sustancias contaminantes. </li>
-        <li><strong>Objetivo :</strong> Devolver este recurso al ciclo del agua, ya sea mediante su vertido a los cauces de agua o bien para su reutilización en actividades como la agricultura.</li>
+        <li><strong>terreno:</strong>Las tierras fueron donadas por el señor Francisco Caram, en enero de 1971, durante la gestion del intendente Luis Beconi, El proyecto se inauguró en el año 1977</li>
+        <li><strong>Origen del Nombre:</strong> en el año 1984, con motivo del fallecimiento de quien fuera el donante de las tierras donde se construyó el Hospital Municipal, se procedió a la sanción de la Ordenanza Nro 38 de fecha 5 de octubre de 1984, la cual impuso al nosocomio el nombre de Hospital Municipal “ Francisco Caram”</li>
+        
       </ul>
     </section>
 
-    <!-- Eventos -->
+
     <section class="mb-5">
-      <h3> Procesos y etapas:</h3>
+      <h3> Problematicas del Hospital:</h3>
       <ul>
-        <li><strong>pre tratamiento:</strong>  es la etapa que da comienzo a la depuración de las aguas residuales y sirve para prepararlas para su purificación durante las siguientes etapas. Así, el agua se libera de objetos que puedan dañar la instalación o los equipos que se usarán a lo largo del proceso de depuración </li>
-        <li><strong>Tratamiento primario: </strong> el objetivo de esta etapa es eliminar una porción de los sólidos suspendidos. Para ello, el agua queda retenida durante 1 a 2 horas en decantadores para que la gravedad ayude a separar esas partículas. Otros beneficios de este proceso son la homogeneización de caudal y la eliminación de materia orgánica asociada a los sólidos suspendidos.</li>
-        <li><strong>Tratamiento secundario:</strong>  Es un tratamiento principalmente biológico, se suele emplear la ayuda de bacterias y microorganismos para degradar y eliminar la materia orgánica y los diferentes nutrientes que contiene el agua</li>
-        <li><strong>Tratamiento terciario o químico:</strong>  se busca aumentar la calidad final del agua para poder devolverla al medio ambiente </li>
+        <li><strong>Problemas:</strong>El hospital, Francisco Caram al ser público, enfrenta una serie de problemáticas que impactan su funcionamiento y la calidad de la atención que ofrecen. </li>
+		<li><strong>Entre las más comunes:</strong> Se encuentran la falta de recursos (humanos, financieros, materiales), la deficiente infraestructura, problemas de gestión administrativa, y fallas en la comunicación interna. </li>
+		<li><strong>problemáticas específicas:</strong> infecciones intrahospitalarias, errores de medicación y riesgos laborales para el personal</li>
       </ul>
     </section>
 
-	<!-- Bandera -->
-    <section class="mb-5">
-      <h3>Planta Depuradora de Brandsen</h3>
-      <p>la planta de tratamiento de aguas residuales utiliza exclusivamente el método biológico, empleando bacterias para depurar el agua. Actualmente, opera al 70% de su capacidad durante las 24 horas del día, los 365 días del año</p>
-      <p> Para alcanzar el funcionamiento óptimo del 100%, se requieren 5 bombas en operación. En este momento, 2 bombas nuevas están en funcionamiento, mientras que 3 bombas están en reparación. </p>
-	  <p> es importante destacar que la planta depuradora juega un papel crucial en el  tratamiento y manejo de residuos líquidos en la región. Su capacidad reducida puede tener implicaciones a largo plazo en la calidad del agua y el medio ambiente</p>
-	  <p> El agua tratada es posteriormente vertida en el canal, que desemboca en el  río Samborombón. Todos los residuos sólidos son tratados en la planta mediante el proceso biológico con bacterias. </p> 
+      <div class="row">
+        <div class="col-md-6 mb-3">
+          <img src="media/CAPS.png" class="img-fluid rounded" alt="CAPS - realizada por alumnos">
+        </div>
+      </div>
+
 
     <!-- Audios con descripciones -->
     <div class="mb-4">
       <h4>Audios</h4>
-      <p><strong>Planta Depuradora, posibles enfermedades:</strong></p>
+      <p><strong>Entrevista a Maria "Chichita" Salamé:</strong></p>
       <audio class="w-100 mb-3" controls>
-        <source src="media/Personas con Problem.mp3" type="audio/mp3">
+        <source src="media/entrevista.mp3" type="audio/mp3">
         Tu navegador no soporta audio.
       </audio>
 
-      <p><strong>Planta Depuradora, enfermedades psicologicas:</strong></p>
+      <p><strong>Ultima entrevista de Chichita:</strong></p>
       <audio class="w-100 mb-3" controls>
-        <source src="media/Efectos Psicologicos.mp3" type="audio/mp3">
+        <source src="media/entrevista1.mp3" type="audio/mp3">
         Tu navegador no soporta audio.
       </audio>
 	  
-      <p><strong>Planta Depuradora, posibles problemas que puede causar:</strong></p>
+      <p><strong>Recordamos a una gran persona:</strong></p>
       <audio class="w-100 mb-3" controls>
-        <source src="media/Problemas que puede .mp3" type="audio/mp3">
+        <source src="media/entrevista2.mp3" type="audio/mp3">
         Tu navegador no soporta audio.
       </audio>
     </div>
@@ -141,6 +139,36 @@
 
       </div>
     </section>
+
+    <!-- Audios con descripciones -->
+    <div class="mb-4">
+      <h4>Audios</h4>
+      <p><strong>Entrevista Alfredo Carlos del Rio:</strong></p>
+      <audio class="w-100 mb-3" controls>
+        <source src="media/nota3.mp3" type="audio/mp3">
+        Tu navegador no soporta audio.
+      </audio>
+
+      <p><strong>Presentacion del doctor:</strong></p>
+      <audio class="w-100 mb-3" controls>
+        <source src="media/nota2.mp3" type="audio/mp3">
+        Tu navegador no soporta audio.
+      </audio>
+	  
+      <p><strong>Entrevista alfredo Carlos DelRio:</strong></p>
+      <audio class="w-100 mb-3" controls>
+        <source src="media/nota1.mp3" type="audio/mp3">
+        Tu navegador no soporta audio.
+      </audio>
+
+      <p><strong>Respuesta del DR. del Rio Problemáticas:</strong></p>
+      <audio class="w-100 mb-3" controls>
+        <source src="media/nota.mp3" type="audio/mp3">
+        Tu navegador no soporta audio.
+      </audio>
+
+    </div>
+
 	
 	
     <a href="index.html" class="btn btn-secondary">Volver al inicio</a>
