--- a/hospital.html
+++ b/hospital.html
@@ -42,16 +42,16 @@
           <img src="media/hospitalb.jpg" class="d-block w-100" alt="Hospital de Brandsen">
         </div>
         <div class="carousel-item active">
-          <img src="media/hospital.jpeg" class="d-block w-100" alt="Hospital de Brandsen">
+          <img src="media/hospital1.jpeg" class="d-block w-100" alt="Hospital de Brandsen">
         </div>
         <div class="carousel-item">
-          <img src="media/hospita2.jpeg" class="d-block w-100" alt="Hospital de Brandsen">
+          <img src="media/hospital2.jpeg" class="d-block w-100" alt="Hospital de Brandsen">
         </div>
         <div class="carousel-item">
-          <img src="media/hospita3.jpeg" class="d-block w-100" alt="Hospital de Brandsen">
+          <img src="media/hospital3.jpeg" class="d-block w-100" alt="Hospital de Brandsen">
         </div>
 		        <div class="carousel-item">
-          <img src="media/hospita4.jpeg" class="d-block w-100" alt="Hospital de Brandsen">
+          <img src="media/hospital4.jpeg" class="d-block w-100" alt="Hospital de Brandsen">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carousel2" data-bs-slide="prev">
