--- a/hospital.html
+++ b/hospital.html
@@ -44,13 +44,13 @@
         <div class="carousel-item active">
           <img src="media/hospital1.jpeg" class="d-block w-100" alt="Hospital de Brandsen">
         </div>
-        <div class="carousel-item">
+        <div class="carousel-item active">
           <img src="media/hospital2.jpeg" class="d-block w-100" alt="Hospital de Brandsen">
         </div>
-        <div class="carousel-item">
+        <div class="carousel-item active">
           <img src="media/hospital3.jpeg" class="d-block w-100" alt="Hospital de Brandsen">
         </div>
-		        <div class="carousel-item">
+		<div class="carousel-item active">
           <img src="media/hospital4.jpeg" class="d-block w-100" alt="Hospital de Brandsen">
         </div>
       </div>
