--- a/hospital.html
+++ b/hospital.html
@@ -33,34 +33,34 @@
 	<h4 class="text-center mb-4">¿Cómo afectan la atención deficiente y la falta de recursos en el hospital Francisco Caram de Brandsen a la salud de la comunidad?</h4>
 
     <!-- Carrusel solo con imágenes -->
-    <div id="carousel2" class="carousel slide mb-5" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="media/hospitala.jpg" class="d-block w-100" alt="Hospital de Brandsen">
-        </div>
-        <div class="carousel-item active">
-          <img src="media/hospitalb.jpg" class="d-block w-100" alt="Hospital de Brandsen">
-        </div>
-        <div class="carousel-item active">
-          <img src="media/hospital1.jpeg" class="d-block w-100" alt="Hospital de Brandsen">
-        </div>
-        <div class="carousel-item active">
-          <img src="media/hospital2.jpeg" class="d-block w-100" alt="Hospital de Brandsen">
-        </div>
-        <div class="carousel-item active">
-          <img src="media/hospital3.jpeg" class="d-block w-100" alt="Hospital de Brandsen">
-        </div>
-		<div class="carousel-item active">
-          <img src="media/hospital4.jpeg" class="d-block w-100" alt="Hospital de Brandsen">
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carousel2" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carousel2" data-bs-slide="next">
-        <span class="carousel-control-next-icon"></span>
-      </button>
+<div id="carousel2" class="carousel slide mb-5" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="media/hospitala.jpg" class="d-block w-100" alt="Hospital de Brandsen">
     </div>
+    <div class="carousel-item">
+      <img src="media/hospitalb.jpg" class="d-block w-100" alt="Hospital de Brandsen">
+    </div>
+    <div class="carousel-item">
+      <img src="media/hospital1.jpeg" class="d-block w-100" alt="Hospital de Brandsen">
+    </div>
+    <div class="carousel-item">
+      <img src="media/hospital2.jpeg" class="d-block w-100" alt="Hospital de Brandsen">
+    </div>
+    <div class="carousel-item">
+      <img src="media/hospital3.jpeg" class="d-block w-100" alt="Hospital de Brandsen">
+    </div>
+    <div class="carousel-item">
+      <img src="media/hospital4.jpeg" class="d-block w-100" alt="Hospital de Brandsen">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carousel2" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carousel2" data-bs-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </button>
+</div>
 
 <!-- Sección de Ubicacion -->
     <section class="mb-5">
